[gd_scene load_steps=2 format=3 uid="uid://dfcyqmsv328hw"]

[ext_resource type="Script" path="res://elektron_minigame.gd" id="1_4wkh4"]

[node name="ElektronMinigame" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1150.0
offset_bottom = 647.0
script = ExtResource("1_4wkh4")

[node name="BackgroundPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 2.0
offset_top = 3.0
offset_right = 1150.0
offset_bottom = 646.0

[node name="OxygenStatus" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 470.0
offset_top = 29.0
offset_right = 696.0
offset_bottom = 101.0

[node name="OxygenLevel" type="ProgressBar" parent="OxygenStatus"]
layout_mode = 2

[node name="OxygenLabel" type="Label" parent="OxygenStatus"]
layout_mode = 2
text = "Oxgen Level"
horizontal_alignment = 1

[node name="InstructionsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 674.0
offset_top = 531.0
offset_right = 924.0
offset_bottom = 580.0
text = "Instructions: "

[node name="GasAnalyzerPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 157.0
offset_top = 147.0
offset_right = 386.0
offset_bottom = 350.0

[node name="GasAnalyzerLabel" type="Label" parent="GasAnalyzerPanel"]
layout_mode = 0
offset_left = 66.0
offset_top = 4.0
offset_right = 170.0
offset_bottom = 27.0
text = "Gas Analyzer "

[node name="ScanButton" type="Button" parent="GasAnalyzerPanel"]
layout_mode = 0
offset_left = 60.0
offset_top = 60.0
offset_right = 157.0
offset_bottom = 126.0
text = "SCAN"

[node name="BubblesSection" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 129.0
offset_top = 397.0
offset_right = 478.0
offset_bottom = 570.0

[node name="BubbleContainer" type="Node2D" parent="BubblesSection"]
position = Vector2(-129, -397)

[node name="ReleasePressureButton" type="Button" parent="BubblesSection"]
layout_mode = 2
text = "Release
Pressure"

[node name="LiquidUnitSection" type="Node2D" parent="."]
position = Vector2(718, 449)

[node name="LiquidUnitSlot" type="Area2D" parent="LiquidUnitSection"]
visible = false

[node name="NewLiquidUnit" type="Sprite2D" parent="LiquidUnitSection"]

[node name="CommandSection" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 746.0
offset_top = 280.0
offset_right = 988.0
offset_bottom = 443.0

[node name="CommandLabel" type="Label" parent="CommandSection"]
layout_mode = 2
text = "COMMAND SECTION"
horizontal_alignment = 1

[node name="PowerOn" type="Button" parent="CommandSection"]
layout_mode = 2
text = "Power On"

[node name="WaterFlow" type="Button" parent="CommandSection"]
layout_mode = 2
text = "Water Flow"

[node name="Electrolysis" type="Button" parent="CommandSection"]
layout_mode = 2
text = "Electrolysis"

[node name="HydrogenPurge" type="Button" parent="CommandSection"]
layout_mode = 2
text = "Purge"

[node name="BubbleTimer" type="Timer" parent="CommandSection"]

[connection signal="pressed" from="BubblesSection/ReleasePressureButton" to="." method="_on_release_pressure_button_pressed"]
